# ran-llm-claude-flow

./: .coverage  .coverage.mac.home.63954.XPzNMuzx  .coveragerc  .gitignore  CLAUDE.md  README.md  cf.md  final_test_report.json  flow-nexus.md  quality-gates-report.json  quality-report.json  requirements.txt  test_report.md  validation_results.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/checkpoints/: summary-session-20250823-051724.md  summary-session-20250823-054806.md  summary-session-20250823-061231.md  task-1755918046.json  (+64 more)
code-samples/: .gitignore
docs/: architecture.md  plan-rust.md
integrated_pipeline/: README_MCP.md  WEEK1_COMPLETION_REPORT.md  WEEKS_2_4_COMPLETION_REPORT.md  mcp_host.py  quick_validation.py  week1_foundation_test.py  week1_validation_results.json
integrated_pipeline/autoscaling/: Cargo.toml  cost-optimizer.rs  integration-test.py  predictive-scaler.py  requirements.txt  scaling-config.yaml
integrated_pipeline/monitoring/: Cargo.toml  README.md  alert_rules.yml  deploy-monitoring.sh  prometheus-config.yml  sla-monitoring.yml
integrated_pipeline/monitoring/.claude-flow/metrics/: performance.json  task-metrics.json
integrated_pipeline/monitoring/benches/: bottleneck_detection.rs  metrics_collection.rs
integrated_pipeline/monitoring/config/: monitoring.yaml
integrated_pipeline/monitoring/src/: alert_manager.rs  alerts.rs  bottleneck_analyzer.rs  config.rs  dashboard.rs  health_monitor.rs  lib.rs  metrics.rs  optimizer.rs  performance_optimizer.rs  predictive_analytics.py  resource_tracker.rs  utils.rs
integrated_pipeline/monitoring/web/: dashboard.html
integrated_pipeline/monitoring/web/templates/: dashboard.html
integrated_pipeline/python_ml/: pyproject.toml  show_completion.py  test_basic.py  test_implementation.py  test_simple.py
integrated_pipeline/python_ml/.claude-flow/metrics/: performance.json  task-metrics.json
integrated_pipeline/python_ml/config/: models_config.yaml
integrated_pipeline/python_ml/src/: __init__.py  consistency_validator.py  deduplication_engine.py  ipc_client.py  main.py  mcp_client.py  mlx_accelerator.py  mlx_optimizer.py  model_manager.py  model_selector.py  predictive_selector.py  quality_assessor.py  semantic_processor.py
integrated_pipeline/rust_core/: Cargo.toml
integrated_pipeline/rust_core/.claude-flow/metrics/: performance.json  task-metrics.json
integrated_pipeline/rust_core/src/: advanced_processor.rs  batch_processor.rs  config.rs  document_processor.rs  hybrid_pipeline.rs  ipc_manager.rs  lib.rs  main.rs  mcp_rpc_impl.rs  mcp_server.rs  ml_integration.rs  numa_optimizer.rs  performance_monitor.rs  quality_validator.rs  simple_document_processor.rs  types.rs
integrated_pipeline/rust_core/src/shared_memory/: mod.rs
integrated_pipeline/scaling/: Cargo.toml  PHASE2_COMPLETION_REPORT.md  auto_adjuster.py  dynamic_scaler.rs  mcp_integration.rs  mod.rs  resource_manager.rs  workload_analyzer.rs
integrated_pipeline/scaling/config/: scaling_config.yaml
integrated_pipeline/scaling/tests/: integration_tests.rs
integrated_pipeline/tests/: Cargo.toml  README.md  direct_validation.py  lib.rs  mcp_integration_test.rs  mcp_integration_tests.rs  production_validation_suite.py  test_core_pipeline.py  test_runner.rs
integrated_pipeline/tests/.claude-flow/metrics/: performance.json  task-metrics.json
integrated_pipeline/tests/benches/: performance_benchmarks.rs
integrated_pipeline/tests/e2e/: mod.rs
integrated_pipeline/tests/fixtures/: test_data.rs
integrated_pipeline/tests/integration/: ipc_integration_tests.rs  mod.rs
integrated_pipeline/tests/performance/: mod.rs
integrated_pipeline/tests/quality/: mod.rs
integrated_pipeline/tests/runners/: mod.rs
integrated_validation/: main.py  pyproject.toml
memory/: memory-store.json
scripts/: benchmark_hybrid_pipeline.py  validate_implementation.py
src/: conversation_format_optimization.py  cross_dataset_consistency.py  deduplication_strategies.py  index.ts  jest.config.js  m3_optimizer.py  md.md  metadata_optimization_schema.py  package.json  performance_monitor.py  performance_optimization.py  plan.md  python.md  quality_control_framework.py  rust.md  tsconfig.json
src/rust-pipeline/: Cargo.toml  performance_analysis_report.md
src/rust-pipeline/.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
src/rust-pipeline/.serena/: project.yml
src/rust-pipeline/benches/: model_selection_bench.rs
src/rust-pipeline/src/: lib.rs  lib_minimal.rs
src/rust-pipeline/src/core/: document_processor.rs  mod.rs  performance_monitor.rs  pipeline_coordinator.rs  quality_validator.rs
src/rust-pipeline/src/io/: batch_processor.rs  document_reader.rs  file_handler.rs  memory_mapper.rs  mod.rs
src/rust-pipeline/src/ipc/: message_queue.rs  mod.rs  process_manager.rs  shared_memory.rs
src/rust-pipeline/src/mcp/: client.rs  error_handling.rs  examples.rs  host.rs  mod.rs  protocol.rs  server.rs  tests.rs
src/rust-pipeline/src/ml/: memory_predictor.rs  mod.rs  model_selector.rs  performance_benchmark.rs  workload_analyzer.rs
src/rust-pipeline/src/monitoring/: analysis.rs  dashboard.rs  mod.rs
src/rust-pipeline/src/optimization/: m3_max.rs  mod.rs
src/rust-pipeline/tests/: comprehensive_io_tests.rs  ml_integration_tests.rs  unit_tests.rs
src/rust-pipeline/tests/io/: batch_processor_tests.rs  document_reader_tests.rs  file_handler_tests.rs  memory_mapper_tests.rs  mod.rs  mod_tests.rs
src/rust-pipeline/web/static/css/: dashboard.css
src/rust-pipeline/web/templates/: dashboard.html
tests/: conftest.py
tests/rust/: AGENT2_MISSION_BRIEF.md  Cargo.toml  TEST_COMPLETION_REPORT.md  comprehensive_rust_tests.rs  comprehensive_test_architecture.md  implementation_guide_for_agent2.md  ipc_integration_tests.rs  lib.rs  mock_factories.rs  mock_framework_specifications.md  performance_benchmarks.rs  simple_rust_tests.rs  test_helpers.rs  test_ml_integration.rs  test_ml_integration_backup.rs
tests/rust/.claude-flow/metrics/: performance.json  task-metrics.json
(+251 files in other folders)
