[package]
name = "integrated_pipeline_monitoring"
version = "0.1.0"
edition = "2021"
authors = ["Claude Performance Specialist"]
description = "High-performance monitoring system for hybrid Rust-Python pipeline"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
crossbeam = "0.8"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
warp = "0.3"
websocket = "0.26"
systemstat = "0.2"
psutil = "3.2"
prometheus = "0.13"
rayon = "1.8"
parking_lot = "0.12"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

num_cpus = "1.16.0"
async-trait = "0.1.77"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
test-case = "3.3"
pretty_assertions = "1.4"

[[bench]]
name = "metrics_collection"
harness = false

[[bench]]  
name = "bottleneck_detection"
harness = false

[lib]
name = "monitoring"
path = "src/lib.rs"

[[bin]]
name = "monitoring-dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "monitoring-collector" 
path = "src/bin/collector.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.16.0"