[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
description = "High-performance Rust core for hybrid pipeline with M3 Max optimization"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
dashmap = "5.5"
rayon = "1.8"
crossbeam-channel = "0.5"
memmap2 = "0.9"
parking_lot = "0.12"
num_cpus = "1.16"
byteorder = "1.5"
crc32fast = "1.3"
libc = "0.2"
tempfile = "3.8"
toml = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
futures = "0.3"
once_cell = "1.19"
tracing-appender = "0.2"
sysinfo = "0.30"  # For system monitoring
arch = "0.1"      # For architecture detection
# MCP Protocol dependencies
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
base64 = "0.21"
http = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "document_processing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[features]
default = ["m3-optimization"]
m3-optimization = []
debug-logging = []