[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"
authors = ["Hybrid Pipeline Team"]
description = "High-performance Rust core for document processing with M3 Max optimization"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
memmap2 = "0.7"
crossbeam = "0.8"
rayon = "1.7"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
nix = "0.27"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"

[dependencies.tracing]
version = "0.1"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"

[[bin]]
name = "rust-core"
path = "src/main.rs"

[[bench]]
name = "document_processing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[build]
rustflags = ["-C", "target-cpu=native"]