[package]
name = "pipeline_tests"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
description = "Comprehensive test suite for hybrid Rust-Python pipeline"

[dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rstest = "0.18"
test-case = "3.3"
mockall = "0.12"
wiremock = "0.6"
tracing = "0.1"
tracing-test = "0.2"
tracing-subscriber = "0.3"
regex = "1.10"
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
memmap2 = "0.9"
byteorder = "1.5"
crc32fast = "1.3"
sysinfo = "0.30"

# Reference to the main rust_core
rust-core = { path = "../rust_core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
similar-asserts = "1.5"

[[test]]
name = "e2e_pipeline_tests"
path = "e2e/mod.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false