[package]
name = "ran-document-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
description = "High-performance Rust I/O pipeline for RAN document processing with M3 Max optimization"
license = "MIT"

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.35", features = [
    "full", 
    "macros", 
    "rt-multi-thread", 
    "sync", 
    "fs", 
    "io-util", 
    "time", 
    "process",
    "signal"
] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter", "json"] }
tracing-appender = "0.2"

# Text processing and formats
regex = "1.10"
encoding_rs = "0.8"
unicode-normalization = "0.1"

# Document format handlers
zip = "0.6"
pdf = "0.8"
scraper = "0.18"
csv = "1.3"
html2text = "0.9"

# Concurrency and parallelism  
rayon = "1.8"
crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
dashmap = "5.5"

# Memory management and performance
memmap2 = "0.9"
bytes = "1.5"
smallvec = { version = "1.11", features = ["serde"] }

# System utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
libc = "0.2"

# Hashing and checksums
crc32fast = "1.3"
blake3 = "1.5"

# Random number generation
rand = "0.8"

# Async trait support
async-trait = "0.1"

# System information
sysinfo = "0.30"

# URL parsing
url = "2.4"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Web server for dashboard
warp = "0.3"
tokio-tungstenite = "0.20"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }

# Circuit breaker pattern
failsafe = "1.2"

# Command line interface (for binaries)
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "ran_document_pipeline"
path = "src/lib.rs"

[[bin]]
name = "pipeline-coordinator"
path = "src/bin/pipeline_coordinator.rs"

# Benchmarks disabled until bench files are created
# [[bench]]
# name = "document_processing_bench"
# harness = false

# [[bench]]
# name = "streaming_performance"
# harness = false

[profile.release]
# Maximum optimization for production processing
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 1
debug = 2
incremental = true

[profile.bench]
# Optimized for benchmarks
opt-level = 3
debug = false
lto = "thin"

[profile.test]
opt-level = 1
debug = 2

[features]
default = ["m3-optimization", "streaming", "metrics"]
m3-optimization = []
streaming = []
metrics = []
debug-logging = ["tracing-subscriber/fmt"]
production = []